# freva-gpt-backend

./: Cargo.toml  Makefile
.github/workflows/: build.yml
dockerfiles/chatbot-backend/: Dockerfile
