[package]
name = "freva-gpt2-backend"
version = "1.11.9"
edition = "2021"
authors = ["Sebastian Willmann"]
repository = "https://gitlab.dkrz.de/k203176/freva-gpt2-backend"
description = "The backend for the second version of the freva-GPT project; a Rest API."
readme = "README.md"
license = "CC-BY-4.0"
keywords = ["LLM", "Freva", "API"]
categories = ["science", "science::geo", "web-programming::http-server"]

[dependencies]
actix-web = "4.11.0"
# async-openai = { git = "https://github.com/SeseMueller/async-openai", version = "0.29.1" } # Better error handling on streaming, but requires internet connection on each build
async-openai = { version = "0.29.2" }
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive", "cargo"] }
const_format = "0.2.34"
documented = { version = "0.9.2" }
dotenvy = "0.15.7"
flexi_logger = { version = "0.31.2", features = ["trc"] }
futures = "0.3.31"
once_cell = "1.21.3"
pyo3 = { version = "0.26.0", features = ["auto-initialize"] }
qstring = "0.7.2"
rand = "0.9.2"
serde = "1.0.219"
serde_json = "1.0.143"
strum = { version = "0.27.2", features = ["strum_macros", "derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
reqwest = { version = "0.12.23", features = [
    "blocking",
], default-features = false }
tokio = { version = "1.47.1", features = ["time"] }
sysinfo = "0.37.0"
fs2 = "0.4.3"
async-process = "2.4.0"
itertools = "0.14.0"
mongodb = { version = "3.3.0" }
chrono = { version = "0.4.41", default-features = false }
async-lazy = "0.1.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"   # Always use expect instead
enum_glob_use = "deny" # Bad form
redundant_closure_for_method_calls = "allow" # Isn't that important and looks weird
doc_markdown = "allow" # Too noisy 
too_many_lines = "allow" # I am aware, do not mark the entire file yellow
too_many_arguments = "allow" # I know, I might refactor it later
cognitive_complexity = "allow" # Not good, a single tracing macro can trigger it

# nursery = {level = "warn", priority = -1} # General "undertested" lints, but many false positives
# pedantic = { level = "warn", priority = -1 } # Only activate these two when preparing for major versions.
